desktop version finished

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,33 +21,80 @@ body{
     padding: 100px 25px;
 }
 
+@media screen and (min-width: 768px) {
+    body {
+        max-width: 800px;
+        grid-template-columns: 290px 1fr;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
 .header{
     overflow: hidden;
     height: 190px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    box-shadow: 0 11px 20px rgba(0, 0, 0, 0.05);
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    height: 375px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+  }
 }
 
 .header__image{
-    max-width: 100%;
+    width: 100%;
     position: relative;
     top: -16px;
 }
 
+
+@media screen and (min-width: 768px) {
+    .header__image {
+      top: 0;
+      width: auto;
+      height: 375px;
+    }
+  }
 
 .article{
     background-color: #fff;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     overflow: hidden;
+    box-shadow: 0 11px 20px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (min-width: 768px) {
+    .article {
+      border-bottom-left-radius: 0;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      position: relative;
+      z-index: 10;
+      height: 375px;
+      width: 600px;
+      overflow: visible;
+    }
+  }
 
 .article__title{
     font-size: 16px;
     color: var(--dark-text);
     line-height: 1.5;
     padding: 0 30px;
+}
+
+@media screen and (min-width: 768px) {
+    .article__title{
+        padding: 40px 50px 0;
+        margin: 0;
+        font-size: 27px;
+    }
 }
 
 .article__text{
@@ -58,11 +105,27 @@ body{
     padding: 0 30px;
 }
 
+@media screen and (min-width: 768px) {
+    .article__text{
+        width: 500px;
+        padding: 20px 50px 30px;
+        margin: 0;
+        font-size: 18px;
+    }
+}
+
 .footer{
     display:flex;
     align-items: center;
     padding-top:20px;
     position: relative;
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+      padding-left: 16px;
+      height: 20px;
+    }
 }
 
 .footer__avatar{
@@ -71,9 +134,22 @@ body{
     margin: -20px 15px 0 30px;
 }
 
+@media screen and (min-width: 768px) {
+    .footer__avatar{
+        max-width: 10%;
+    }
+}
+
 .footer__info{
     width: 170px;
     margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__info {
+    width: 370px;
+    margin-bottom: 20px;
+  }
 }
 
 .footer__name{
@@ -83,10 +159,22 @@ body{
     margin: 0;
 }
 
+@media screen and (min-width: 768px) {
+    .footer__name{
+        font-size: 16px;
+    }
+}
+
 .footer__date{
     font-size: 12px;
     color: var(--date-text);
     margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+    .footer__date{
+        font-size: 15px;
+    }
 }
 
 .share{
@@ -98,6 +186,13 @@ body{
     border-radius: 50%;
     z-index: 10;
     margin-top: -10px;
+}
+
+@media screen and (min-width: 768px) {
+    .share{
+        left: -10px;
+        top: -10px;
+    }
 }
 
 .share--active{
@@ -120,7 +215,30 @@ body{
     padding: 10px 30px;
     margin-bottom: 5px;
     transition: opacity 0.3s ;
+    box-shadow: 0 11px 20px rgba(0, 0, 0, 0.05);
 }
+
+@media screen and (min-width: 768px) {
+    .tooltip {
+        left: 356px;
+        width: 220px;
+        height: 50px;
+        border-radius: 10px;
+        top: -107px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tooltip::after{
+        content: '';
+        position: absolute;
+        bottom: -19px;
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-top: 20px solid var(--bg-social-bar);
+        box-shadow: 0 11px 20px rgba(0, 0, 0, 0.05);
+    }
+  }
 
 .tooltip__text{
     letter-spacing: 5px;
